@@ -4,6 +4,8 @@ Changelog
 0.4b2 - unreleased
 ------------------
 
+* When no conditional themes match, pass the document through without theming.
+
 * Fix loading of compiler stylesheets so as not to be affected by resolvers.
 
 0.4b1 - 2010-08-06
